added migrations for models

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,2 +1,2 @@
 SALT: "\x12\xAC\x13GH\xE7\xFA\x8B\x7F\xE5w\x14\x14\xBF\xF7J, O\x88n5\xB2\xF3\x866G\xF9\x93E\xB1\x8D"
-CRYPT_KEY: "2\xBBJ\xDB2\xA8\xDBY\x1An\xBC0*\f\xC3s\x01\xCBb\x81\xC7\x18\x82LA\x96\xD1\x1A\xBC>\x17\x8A"
+IV: "\xDC O$\xB3F\xBElW\x81\xC7\x1A\x16\xB4\x05\xEE\x17\xBA\xC2N\xED-[\xBD}\x97\xFB\xFF[g\xAE\xEB"
